--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "description": "Personal blog site generator",
   "scripts": {
-    "dev": "pnpm dev:next",
-    "dev:next": "next",
-    "build": "pnpm build:next",
-    "build:next": "next build",
-    "start": "serve out",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "format:check": "pnpm format --check --debug-check",
-    "format:fix": "pnpm format --write"
+    "format:fix": "pnpm format --write",
+    "pages:build": "pnpm next-on-pages",
+    "preview": "pnpm pages:build && wrangler pages dev",
+    "deploy": "pnpm pages:build && wrangler pages deploy",
+    "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@types/node": "^18.11.5",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
@@ -32,13 +32,20 @@
     "remark-html": "^16.0.1",
     "serve": "^14.2.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.2",
+    "@cloudflare/next-on-pages": "1",
+    "@cloudflare/workers-types": "^4.20240924.0",
+    "@types/node": "^18.11.5",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.12"
+    "tailwindcss": "^3.4.12",
+    "typescript": "^5.6.2",
+    "vercel": "^37.5.4",
+    "wrangler": "^3.78.8"
   }
 }
