--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.445.0",
     "next": "latest",
     "next-contentlayer": "^0.3.4",
