--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format:check": "pnpm format --check --debug-check",
-    "format:fix": "pnpm format --write",
+    "format": "biome check --write app/** components/** lib/**",
     "pages:build": "pnpm next-on-pages",
     "preview": "pnpm pages:build && wrangler pages dev",
     "deploy": "pnpm pages:build && wrangler pages deploy",
