--- a/biome.jsonc
+++ b/biome.jsonc
@@ -16,6 +16,9 @@
       },
       "suspicious": {
         "noArrayIndexKey": "off"
+      },
+      "security": {
+        "noDangerouslySetInnerHtml": "off"
       }
     }
   },
