--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@biomejs/biome": "^1.9.2",
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240924.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
