--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.445.0",
+    "markdown-to-jsx": "^7.5.0",
     "next": "latest",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^5.2.10",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "serve": "^14.2.0",
