--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
+    "highlight.js": "^11.10.0",
     "lucide-react": "^0.445.0",
     "markdown-to-jsx": "^7.5.0",
     "next": "latest",
@@ -50,6 +51,7 @@
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2",
     "vercel": "^37.5.4",
-    "wrangler": "^3.78.8"
+    "wrangler": "^3.78.8",
+    "@types/mdx": "^2.0.13"
   }
 }
