--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.13",
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.445.0",
+    "@iconify/react": "^6.0.0",
     "next": "^14",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
