--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Personal blog site generator",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "format": "biome check --write app/** components/** lib/**",
     "pages:build": "npx @cloudflare/next-on-pages",
@@ -14,6 +14,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv env.d.ts"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-separator": "^1.1.0",
@@ -24,9 +25,9 @@
     "dayjs": "^1.11.13",
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.445.0",
-    "@iconify/react": "^6.0.0",
     "next": "^14",
     "next-contentlayer": "^0.3.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
