--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "blog",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
-  "description": "Personal blog site generator",
+  "description": "Personal blog site of Rory",
   "scripts": {
     "dev": "next dev",
     "build": "next build && next-sitemap",
