--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "contentlayer": "^0.3.4",
     "dayjs": "^1.11.13",
+    "github-slugger": "^2.0.0",
     "highlight.js": "^11.10.0",
     "lucide-react": "^0.445.0",
     "next": "^14",
@@ -33,11 +34,17 @@
     "react-dom": "^18.2.0",
     "react-medium-image-zoom": "^5.2.10",
     "reading-time-estimator": "^1.11.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
     "remark-html": "^16.0.1",
+    "remark-mdx": "^3.1.0",
+    "remark-parse": "^11.0.0",
     "serve": "^14.2.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
@@ -45,6 +52,7 @@
     "@cloudflare/next-on-pages": "1",
     "@cloudflare/workers-types": "^4.20240924.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/mdast": "^4.0.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
